// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductTileCompact renders correct snapshot in loading state 1`] = `
.c2 {
  position: relative;
  background-color: rgba(0,0,0,.1);
  width: 172px;
  height: 74px;
}

.c7 {
  margin: 16px 0;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c9 {
  margin: 0;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c8 {
  display: inline-block;
  color: rgba(0,0,0,0);
  background-color: rgba(0,0,0,0.1);
  width: unset;
}

.c8::before {
  content: '';
  display: block;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: 12px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-width: 100%;
  margin: auto;
  padding: 4px 0;
  padding-left: 0;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  cursor: pointer;
  text-align: left;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: relative;
  padding: 8px 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 {
  min-width: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  position: relative;
  width: 100%;
}

.c3 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-left: 24px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c10 {
  margin: 8px 0;
  padding: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
}

@media (min-width:752px) {
  .c1 {
    text-align: unset;
  }
}

@media (max-width:512px) {
  .c6 {
    padding: 0 16px;
  }
}

@media (max-width:752px) {
  .c3 {
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    margin-left: 16px;
  }
}

<div
  className="c0"
  data-test="compact-wrapper"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      height="74px"
      width="172px"
    />
  </div>
  <div
    className="c3"
  >
    <div
      className="c4"
      onClick={[MockFunction]}
    >
      <div
        className="c5"
      >
        <div
          className="c6"
        >
          <span
            className="c7 c8"
          >
            product title
          </span>
          <span
            className="c9 c8"
          >
            product meta info
          </span>
        </div>
      </div>
      <div
        className="c10"
      />
    </div>
  </div>
</div>
`;

exports[`ProductTileCompact renders correct snapshot with button children 1`] = `
.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c16 svg {
  width: 20px;
  height: 20px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  fill: currentColor;
}

.c16 svg g,
.c16 svg p {
  fill: currentColor;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  outline: none;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-appearance: none;
  padding: 12px 24px;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: normal;
  font-size: 16px;
  height: 48px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  box-shadow: none;
  border: 2px solid #00C8DC;
  background: #FFFFFF;
  color: #00C8DC;
}

.c13 .c15 {
  padding: 0 0px;
}

.c13 .Status-y46az8-0 {
  position: absolute;
  top: -6px;
  right: -6px;
}

.c13:hover {
  box-shadow: 0 8px 10px 1px rgba(0,0,0,0.07),0 3px 14px 2px rgba(0,0,0,0.06),0 5px 5px -3px rgba(0,0,0,0.10);
}

.c13 > span {
  color: inherit;
  display: block;
  text-align: center;
  width: 100%;
}

.c14 {
  min-width: 40px;
  height: 40px;
  padding: 0 8px;
}

.c7 {
  margin: 16px 0 0;
  color: #333333;
  font-size: 18px;
  line-height: 28px;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  white-space: normal;
  overflow: hidden;
  max-height: calc(28px * 2);
  -webkit-line-clamp: 2;
  display: -webkit-box;
  -webkit-box-orient: vertical;
}

.c9 {
  padding: 0 16px 0 0;
  color: #999999;
  font-size: 14px;
  line-height: 20px;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c2 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  max-width: 100%;
}

.c2 img {
  border-radius: 8px;
  height: 74px;
  object-fit: cover;
}

.c8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c17 {
  display: block;
  width: 100%;
  width: 16px;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: 12px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-width: 100%;
  margin: auto;
  padding: 4px 0;
  padding-left: 0;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  cursor: pointer;
  text-align: left;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: relative;
  padding: 8px 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 {
  min-width: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  position: relative;
  width: 100%;
}

.c3 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-left: 24px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c11 {
  margin: 8px 0;
  padding: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
}

.c10 {
  border-right: 1px solid #666666;
}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {
  .c2 {
    max-width: 172px;
  }
}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {
  .c2 img {
    max-width: 100%;
    width: auto;
    height: auto;
  }
}

@media (min-width:752px) {
  .c1 {
    text-align: unset;
  }
}

@media (max-width:512px) {
  .c6 {
    padding: 0 16px;
  }
}

@media (max-width:752px) {
  .c3 {
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    margin-left: 16px;
  }
}

<div
  className="c0"
  data-test="compact-wrapper"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      height="74px"
      width="172px"
    >
      <picture
        style={
          Object {
            "height": "74px",
            "width": "100%",
          }
        }
      >
        <img
          alt="image"
          height="74px"
          loading="eager"
          src="https://i.picsum.photos/id/1011/5472/3648.jpg?hmac=Koo9845x2akkVzVFX3xxAc9BCkeGYA9VRVfLE4f0Zzk"
          width="172px"
        />
      </picture>
    </div>
  </div>
  <div
    className="c3"
  >
    <div
      className="c4"
      onClick={[MockFunction]}
    >
      <div
        className="c5"
      >
        <div
          className="c6"
        >
          <div
            className="c7"
            color="grey6"
            display="flex"
            fontSize="md"
          >
            Shut Up and Sit Down: Why the leadership industry rules.
          </div>
          <div
            className="c8"
            display="inline-flex"
          >
            <div
              className="c9 c10"
              color="grey4"
              display="inline-flex"
              fontSize="xs"
            >
              Lovefilm
            </div>
          </div>
        </div>
      </div>
      <div
        className="c11"
      />
    </div>
    <div
      className="c12"
      display="flex"
    >
      <button
        className="c13 c14"
        disabled={false}
        height={40}
        onClick={[Function]}
        size="md"
        type="button"
        width={40}
      >
        <div
          className="c15 c16"
          height={20}
          width={20}
        >
          <svg
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 8l.87 12.14a2 2 0 002 1.86h8.28a2 2 0 002-1.86L19 8zm11 7.5a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V16H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11v-2.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V14h2.5a.5.5 0 01.5.5zM19.5 4H15V3a1 1 0 00-1-1h-4a1 1 0 00-1 1v1H4.5a.5.5 0 00-.5.5v1a.5.5 0 00.5.5h15a.5.5 0 00.5-.5v-1a.5.5 0 00-.5-.5z"
            />
          </svg>
        </div>
      </button>
      <div
        className="c17"
        direction="vertical"
        size="md"
      />
    </div>
  </div>
</div>
`;

exports[`ProductTileCompact renders correct snapshot with product data 1`] = `
.c7 {
  margin: 16px 0 0;
  color: #333333;
  font-size: 18px;
  line-height: 28px;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  white-space: normal;
  overflow: hidden;
  max-height: calc(28px * 2);
  -webkit-line-clamp: 2;
  display: -webkit-box;
  -webkit-box-orient: vertical;
}

.c9 {
  padding: 0 16px 0 0;
  color: #999999;
  font-size: 14px;
  line-height: 20px;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c2 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  max-width: 100%;
}

.c2 img {
  border-radius: 8px;
  height: 74px;
  object-fit: cover;
}

.c8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: 12px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-width: 100%;
  margin: auto;
  padding: 4px 0;
  padding-left: 0;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  cursor: pointer;
  text-align: left;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: relative;
  padding: 8px 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 {
  min-width: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  position: relative;
  width: 100%;
}

.c3 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-left: 24px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c11 {
  margin: 8px 0;
  padding: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
}

.c12 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c10 {
  border-right: 1px solid #666666;
}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {
  .c2 {
    max-width: 172px;
  }
}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {
  .c2 img {
    max-width: 100%;
    width: auto;
    height: auto;
  }
}

@media (min-width:752px) {
  .c1 {
    text-align: unset;
  }
}

@media (max-width:512px) {
  .c6 {
    padding: 0 16px;
  }
}

@media (max-width:752px) {
  .c3 {
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    margin-left: 16px;
  }
}

<div
  className="c0"
  data-test="compact-wrapper"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      height="74px"
      width="172px"
    >
      <picture
        style={
          Object {
            "height": "74px",
            "width": "100%",
          }
        }
      >
        <img
          alt="image"
          height="74px"
          loading="eager"
          src="https://i.picsum.photos/id/1011/5472/3648.jpg?hmac=Koo9845x2akkVzVFX3xxAc9BCkeGYA9VRVfLE4f0Zzk"
          width="172px"
        />
      </picture>
    </div>
  </div>
  <div
    className="c3"
  >
    <div
      className="c4"
      onClick={[MockFunction]}
    >
      <div
        className="c5"
      >
        <div
          className="c6"
        >
          <div
            className="c7"
            color="grey6"
            display="flex"
            fontSize="md"
          >
            Shut Up and Sit Down: Why the leadership industry rules.
          </div>
          <div
            className="c8"
            display="inline-flex"
          >
            <div
              className="c9 c10"
              color="grey4"
              display="inline-flex"
              fontSize="xs"
            >
              Lovefilm
            </div>
          </div>
        </div>
      </div>
      <div
        className="c11"
      >
        <div
          className="c12"
        />
      </div>
    </div>
  </div>
</div>
`;
